# bezierapprox

./: .gitattributes  CMakeLists.txt  README.md  bezierapproxlib.pc.in
docs/: bezierapprox.tex
examples/: .gitignore  bezierapproxlib.py  bezierdemo.py
include/: bezierapprox.h
src/: bezierapprox.c
tests/: bezierapprox_tests.c
